--- a/Kobu_prototype/app/build.gradle
+++ b/Kobu_prototype/app/build.gradle
@@ -28,5 +28,6 @@ dependencies {
         exclude group: 'com.android.support', module: 'support-annotations'
     })
     compile 'com.android.support:appcompat-v7:25.0.1'
+    compile 'co.trikita:log:1.1.5'
     testCompile 'junit:junit:4.12'
 }
