--- a/Kobu_prototype/app/build.gradle
+++ b/Kobu_prototype/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     compile 'co.trikita:log:1.1.5'
     testCompile 'junit:junit:4.12'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
+    compile 'com.android.support:design:25.0.1'
 }
 
 repositories {
