--- a/Kobu_prototype/app/build.gradle
+++ b/Kobu_prototype/app/build.gradle
@@ -36,6 +36,8 @@ dependencies {
     testCompile 'junit:junit:4.12'
     compile "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     compile 'com.android.support:design:25.0.1'
+    compile 'io.reactivex:rxandroid:1.2.1'
+    compile 'io.reactivex:rxjava:1.1.6'
 }
 
 repositories {
